--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -59,7 +59,7 @@ jobs:
           path: pydantic-core
 
       - name: install pydantic-core with profiling symbols
-        run: uv run --python 3.12 --directory pydantic-core make build-pgo
+        run: uv run --python 3.12 --project . --directory pydantic-core make build-pgo
         env:
           CARGO_PROFILE_RELEASE_DEBUG: "line-tables-only"
 
