--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -38,7 +38,7 @@ jobs:
           import tomllib
 
           pyproject_toml = tomllib.loads(open('pyproject.toml').read())
-          core = next(d for d in pyproject_toml['project']['dependecies'] if d.startswith('pydantic-core'))
+          core = next(d for d in pyproject_toml['project']['dependencies'] if d.startswith('pydantic-core'))
 
           if (result := re.search(r'==(.+)', core)) is not None:
             print(f'v{result.group(1)}')
@@ -59,7 +59,9 @@ jobs:
           path: pydantic-core
 
       - name: install pydantic-core with profiling symbols
-        run: uv run --python 3.12 --project . --directory pydantic-core make build-pgo
+        run: |
+          ls -la
+          uv run --python 3.12 --project . --directory pydantic-core make build-pgo
         env:
           CARGO_PROFILE_RELEASE_DEBUG: "line-tables-only"
 
