--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -59,9 +59,7 @@ jobs:
           path: pydantic-core
 
       - name: install pydantic-core with profiling symbols
-        run: |
-          ls -la
-          uv run --python 3.12 --project . --directory pydantic-core make build-pgo
+        run: uv run bash -c "cd ../pydantic-core && make build-pgo"
         env:
           CARGO_PROFILE_RELEASE_DEBUG: "line-tables-only"
 
