--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -15,7 +15,7 @@ env:
 jobs:
   codspeed-profiling:
     name: CodSpeed profiling
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
 
@@ -57,6 +57,16 @@ jobs:
           repository: pydantic/pydantic-core
           ref: ${{ steps.core-version.outputs.core-ref }}
           path: pydantic-core
+
+      - name: install rust stable
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          components: llvm-tools
+
+      - name: cache rust
+        uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: pydantic-core
 
       - name: install pydantic-core with profiling symbols
         run: |
