--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -9,6 +9,10 @@ on:
   # performance analysis in order to generate initial data.
   workflow_dispatch:
 
+env:
+  UV_FROZEN: true
+  UV_PYTHON: 3.13
+
 jobs:
   benchmarks:
     runs-on: ubuntu-22.04
@@ -16,29 +20,21 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # Using this action is still necessary for CodSpeed to work:
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
+          python-version: ${{ env.UV_PYTHON}}
 
-      - uses: actions/cache@v4
-        id: cache-py
-        name: cache python
+      - name: install uv
+        uses: astral-sh/setup-uv@v3
         with:
-          path: ${{ env.pythonLocation }}
-          key: >
-            py-v2
-            ${{ env.pythonLocation }}
-            ${{ hashFiles('tests/requirements.txt') }}
-            ${{ hashFiles('pyproject.toml') }}
+          enable-cache: true
 
-      - run: pip install -r tests/requirements.txt
-        if: steps.cache-py.outputs.cache-hit != 'true'
-
-      - run: pip uninstall pytest-speed -y
-        if: steps.cache-py.outputs.cache-hit != 'true'
-
-      - run: pip install pytest-benchmark==4.0.0 pytest-codspeed
-        if: steps.cache-py.outputs.cache-hit != 'true'
+      - name: install deps
+        run: |
+          uv sync --group testing
+          uv pip uninstall pytest-speed
+          uv pip install pytest-benchmark==4.0.0 pytest-codspeed
 
       - name: install rust stable
         id: rust-toolchain
@@ -56,7 +52,7 @@ jobs:
           RUSTFLAGS: "-Cprofile-generate=${{ github.workspace }}/profdata"
 
       - name: Gather pgo data
-        run: pytest tests/benchmarks
+        run: uv run pytest tests/benchmarks
 
       - name: Prepare merged pgo data
         run: rustup run stable bash -c '$RUSTUP_HOME/toolchains/$RUSTUP_TOOLCHAIN/lib/rustlib/x86_64-unknown-linux-gnu/bin/llvm-profdata merge -o ${{ github.workspace }}/merged.profdata ${{ github.workspace }}/profdata'
@@ -70,4 +66,4 @@ jobs:
       - name: Run CodSpeed benchmarks
         uses: CodSpeedHQ/action@v3
         with:
-          run: pytest tests/benchmarks/ --codspeed
+          run: uv run pytest tests/benchmarks/ --codspeed
