--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -100,7 +100,5 @@ jobs:
       - name: Run CodSpeed benchmarks
         uses: CodSpeedHQ/action@v3
         with:
-          # --no-sync ensures that the locally-built core is not overwritten
-          run: uv run --no-sync pytest ./tests/benchmarks --codspeed
-        env:
-          UV_FROZEN: false # necessary for --no-sync to be allowed
+          # skip uv to avoid it uninstalling the custom-built pydantic-core
+          run: .venv/bin/pytest ./tests/benchmarks --codspeed
