--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -71,7 +71,7 @@ jobs:
       - name: install pydantic-core with profiling symbols
         run: |
           uv pip install pip
-          uv run bash -c "cd pydantic-core && pip install -r tests/requirements.txt && pip uninstall --yes pytest-speed && make build-pgo"
+          uv run bash -c "cd pydantic-core && uv pip install -e '.[testing]' && uv pip uninstall --yes pytest-speed && make build-pgo"
         env:
           CARGO_PROFILE_RELEASE_DEBUG: "line-tables-only"
           CARGO_PROFILE_RELEASE_STRIP: "false"
