--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ requires-python = '>=3.8'
 dependencies = [
     'typing-extensions>=4.12.2',
     'annotated-types>=0.6.0',
-    'pydantic-core==2.27.1',
+    'pydantic-core @ git+https://github.com/andresliszt/pydantic-core.git@support/exclude-if-at-field-level'
 ]
 dynamic = ['version', 'readme']
 
