--- a/pyproject.toml
+++ b/pyproject.toml
@@ -200,6 +200,9 @@ select = [
     'T20',    # flake8-print
     'C4',     # flake8-comprehensions
     'PYI006', # flake8-pyi
+    'PYI062', # flake8-pyi
+    'PYI063', # flake8-pyi
+    'PYI066', # flake8-pyi
 ]
 ignore = ['D105', 'D107', 'D205', 'D415', 'E501', 'B011', 'B028', 'B904']
 flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
@@ -212,7 +215,9 @@ pydocstyle = { convention = 'google' }
 'pydantic/__init__.py' = ['F405', 'F403', 'D']
 'tests/test_forward_ref.py' = ['F821']
 'tests/*' = ['D', 'B', 'C4']
-'pydantic/deprecated/*' = ['D']
+'pydantic/deprecated/*' = ['D', 'PYI']
+'pydantic/color.py' = ['PYI']
+'pydantic/_internal/_decorators_v1.py' = ['PYI']
 'pydantic/json_schema.py' = ['D']
 
 [tool.ruff.lint.extend-per-file-ignores]
