--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -30,40 +30,36 @@ jobs:
         with:
           enable-cache: true
 
-      - name: install deps
+      - name: Install deps
         run: |
           uv sync --group testing
           uv pip uninstall pytest-speed
           uv pip install pytest-benchmark==4.0.0 pytest-codspeed
 
-      - name: install rust stable
+      - name: Install rust stable
         id: rust-toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
           components: llvm-tools
 
-      - name: cache rust
+      - name: Cache rust
         uses: Swatinem/rust-cache@v2
 
-      - name: Compile pydantic-core for profiling
-        run: make build-profiling
+      - name: Build PGO wheel
+        id: pgo-wheel
+        uses: ./.github/actions/build-pgo-wheel
+        with:
+          interpreter: ${{ env.UV_PYTHON }}
+          rust-toolchain: ${{ steps.rust-toolchain.outputs.name }}
         env:
-          CONST_RANDOM_SEED: 0 # Fix the compile time RNG seed
-          RUSTFLAGS: "-Cprofile-generate=${{ github.workspace }}/profdata"
+          # make sure profiling information is present
+          CARGO_PROFILE_RELEASE_DEBUG: "line-tables-only"
+          CARGO_PROFILE_RELEASE_STRIP: false
 
-      - name: Gather pgo data
-        run: uv run pytest tests/benchmarks
-
-      - name: Prepare merged pgo data
-        run: rustup run stable bash -c '$RUSTUP_HOME/toolchains/$RUSTUP_TOOLCHAIN/lib/rustlib/x86_64-unknown-linux-gnu/bin/llvm-profdata merge -o ${{ github.workspace }}/merged.profdata ${{ github.workspace }}/profdata'
-
-      - name: Compile pydantic-core for benchmarking
-        run: make build-profiling
-        env:
-          CONST_RANDOM_SEED: 0 # Fix the compile time RNG seed
-          RUSTFLAGS: "-Cprofile-use=${{ github.workspace }}/merged.profdata"
+      - name: Install PGO wheel
+        run: uv pip install ${{ steps.pgo-wheel.outputs.wheel }} --force-reinstall
 
       - name: Run CodSpeed benchmarks
         uses: CodSpeedHQ/action@v3
         with:
-          run: uv run pytest tests/benchmarks/ --codspeed
+          run: uv run --group=codspeed pytest tests/benchmarks/ --codspeed
