--- a/.github/actions/build-pgo-wheel/action.yml
+++ b/.github/actions/build-pgo-wheel/action.yml
@@ -53,7 +53,7 @@ runs:
 
     - name: merge pgo data
       run: ${{ env.LLVM_PROFDATA }} merge -o ${{ github.workspace }}/merged.profdata ${{ github.workspace }}/profdata
-      shell: bash
+      shell: pwsh  # because it handles paths on windows better, and works well enough on unix for this step
 
     - name: build pgo-optimized wheel
       uses: PyO3/maturin-action@v1
