--- a/tests/requirements-linting.txt
+++ b/tests/requirements-linting.txt
@@ -8,5 +8,6 @@ mypy==0.971
 pre-commit==2.20.0
 pycodestyle==2.11.1
 pyflakes==3.1.0
+pyright==1.1.389
 twine==5.1.1
 tomli==2.0.1 # to squelch mypy warnings about types
