remove plugin with usage docstrings

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -205,7 +205,7 @@ hooks:
 - 'docs/plugins/main.py'
 
 plugins:
-- social
+# - social
 - mike:
     alias_type: symlink
     canonical_version: latest
@@ -228,8 +228,6 @@ plugins:
           merge_init_into_class: true
           show_signature_annotations: true
           signature_crossrefs: true
-          extensions:
-            - docs/plugins/griffe_doclinks.py
         import:
           - url: https://docs.python.org/3/objects.inv
             domains: [py, std]
